--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -2,7 +2,7 @@
   {{#each this}}
   <section class="comment">
     <div class="meta">
-      {{vote_count}} point(s) by {{user.username}} on {{format_date created_at}}
+      Commented by {{user.username}} on {{format_date created_at}}
     </div>
     <div class="text">
       {{comment_text}}
