--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <article class="post">
   <div class="title">
-    <a href="{{post_url}}" target="_blank">{{title}}</a>
-    <span>({{format_url post_url}})</span>
+    <a href="{{post_text}}" target="_blank">{{title}}</a>
+    <span>({{post_text}})</span>
   </div>
   <div class="meta">
     Created by {{user.username}} on {{format_date created_at}}
