--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/dashboard"> &larr; Back to My Stuff</a>
+  <a href="/my-stuff"> &larr; Back to My Stuff</a>
   <h2>
     Edit Post
   </h2>
