--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
       <nav>
       {{#if loggedIn}}
       <a href="/">Feed</a>
-      <a href="/dashboard">My Stuff</a>
+      <a href="/my-stuff">My Stuff</a>
       <button id="logout" class="btn-no-style">Logout</button>
       {{else}}
       <a href="/login">login</a>
