got model relationships working and data included for correct routes

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<article class="post">
+<article class="item">
   <div class="title">
     <a href="{{post_text}}" target="_blank">{{title}}</a>
     <span>({{post_text}})</span>
