objects added to homepage.handlebars

--- a/views/partials/object.handlebars
+++ b/views/partials/object.handlebars
@@ -1,7 +1,14 @@
-<section class="comment">
-  <div class="meta">
+<section class="items">
+  <div class="name">
+    {{Object.name}}
   </div>
-  <div class="text">
-    {{item_text}}
+  <div class="description">
+    {{Object.description}}
+  </div>
+  <div class="quantity">
+    {{Object.quantity}}
+  </div>
+  <div class="condition">
+    {{Object.condition}}
   </div>
 </section>
