fixed the post_text entry field on dashboard, removed comment form from edit-post, and removed the numbers from the ordered lists

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,8 +7,8 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
+      <label for="post-text">Text</label>
+      <textarea name="post-text" type="text"></textarea>
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
