--- a/views/partials/object.handlebars
+++ b/views/partials/object.handlebars
@@ -1,14 +1,14 @@
 <section class="items">
   <div class="name">
-    {{Object.name}}
+    Name: {{Object.name}}
   </div>
   <div class="description">
-    {{Object.description}}
+    Description: {{Object.description}}
   </div>
   <div class="quantity">
-    {{Object.quantity}}
+    Quantity: {{Object.quantity}}
   </div>
   <div class="condition">
-    {{Object.condition}}
+    Condition: {{Object.condition}}
   </div>
 </section>
