fixed title links, removed () from post_text

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,8 @@
 <article class="item">
   <div class="title">
-    <a href="{{post_text}}" target="_blank">{{title}}</a>
-    <span>({{post_text}})</span>
+    <a href="/post/{{id}}">{{title}}</a>
+    <br/>
+    <span>{{post_text}}</span>
   </div>
   <div class="meta">
     Created by {{user.username}} on {{format_date created_at}}
