--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -55,6 +55,13 @@ ol {
   list-style-type: none;
 }
 
+li {
+  border: 2px solid var(--blink-peach);
+  margin: 10px 0;
+  padding: 0 10px;
+  border-radius: 10px
+}
+
 textarea,
 input,
 .comment {
