kept old code for email.js as comment

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,7 +6,7 @@
   --blink-orange: #ff5100;
   --blink-peach: #f5ad7e;
   --blink-teal: #00f7ff;
-  --blink-black: #000000;
+  --blink-black: #ffffff;
 }
 
 body,
