added different styling so that posts are easier to read

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
-<ol class="post-list">
+<ul class="post-list">
   {{#each posts as |post|}}
   <li>
     {{> post-info post}}
     {{> object post}}
   </li>
   {{/each}}
-</ol>
+</ul>
