styling to posts and items on front page

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,11 +24,22 @@ a {
   color: var(--swap-primary);
   font-weight: bold;
   transition: color 0.1s;
-  margin-left: 16px;
 }
 
 a:hover {
   color: var(--swap-secondary);
+}
+
+.post-link {
+  color: var(--swap-background);
+}
+
+.post-link:hover {
+  color: var(--swap-secondary);
+}
+
+li:nth-child(odd) .post-link:hover {
+  color: var(--swap-primary)
 }
 
 button {
@@ -59,7 +70,7 @@ li {
   border: 2px solid var(--blink-peach);
   margin: 10px 0;
   padding: 0 10px;
-  border-radius: 10px
+  border-radius: 10px;
 }
 
 textarea,
@@ -107,18 +118,21 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 1%;
+  top: 0;
+  position: sticky;
+  background: var(--swap-background);
 }
 
 header h1,
 footer h1 {
   font-size: 2em;
   font-family: "Permanent Marker", cursive;
-  color: var(--swap-secondary);
+  color: var(--swap-primary);
 }
 
 header h1 span,
 footer h1 span {
-  color: var(--swap-primary);
+  color: var(--swap-secondary);
 }
 
 nav {
@@ -137,11 +151,11 @@ label {
 
 article.item,
 section.items {
-  background: var(--swap-secondary);
+  background: var(--swap-primary);
   margin: 1rem;
   padding: 1rem;
-  border-radius: .5em;
-  width: 50%
+  border-radius: 0.5em;
+  width: 50%;
 }
 
 ul {
@@ -218,7 +232,9 @@ li {
   margin-bottom: 1%;
 }
 
-.comment:nth-child(odd) {
+.comment:nth-child(odd), 
+li:nth-child(odd) .item, 
+li:nth-child(odd) .items {
   background-color: var(--swap-secondary);
 }
 
