--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">SWAP <span>SQUAD</span></a>
+        <a id="title" href="/">SWAP <span>SQUAD</span></a>
       </h1>
       <nav>
       {{#if loggedIn}}
