--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -45,7 +45,7 @@ li:nth-child(odd) .post-link:hover {
 button {
   background-color: var(--swap-primary);
   border: 0;
-  padding: 1%;
+  padding: .75rem 1rem;
   color: var(--swap-letters);
   font-weight: bold;
   transition: background-color 0.1s;
@@ -55,6 +55,10 @@ button {
 
 button:hover {
   background-color: var(--swap-secondary);
+}
+
+form button {
+  margin: 1rem 0 0 0;
 }
 
 .post-list {
@@ -79,9 +83,17 @@ input,
   padding: 0.5%;
   border-radius: 5px;
   border: 1px solid #ccc;
-  display: block;
   margin: 1rem 0;
   width: 100%;
+}
+
+#item-details {
+  display: flex;
+}
+
+#item-details > div {
+  width: 50%;
+  margin: 0 1rem 0 0;
 }
 
 textarea:focus,
@@ -166,6 +178,12 @@ li {
   display: flex;
 }
 
+#object-wrapper, 
+#post-wrapper {
+  width: 50%;
+  margin: 1rem;
+}
+
 .btn-no-style {
   background: none;
   border: none;
@@ -244,8 +262,8 @@ li:nth-child(odd) .items {
   opacity: 0.6;
 }
 
-.new-post-form input {
-  width: 300px;
+#content-wrapper {
+  display: flex;
 }
 
 .edit-post-form {
