--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
-<form class="login-form">
+<form class="login-form form">
+  <h1>Log in</h1>
   <div>
     <label for="email-login">email:</label>
     <input type="email" id="email-login">
@@ -12,7 +13,8 @@
   </div>
 </form>
 
-<form class="signup-form">
+<form class="signup-form form">
+  <h1>Sign Up</h1>
   <div>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
