made condition a drop down menu, hompage now displays username

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,7 +24,13 @@
     </div>
     <div>
       <label for="item-condition">Item Condition</label>
-      <input type="text" id="item-condition" name="item-condition" />
+      <select name="item-condition" id="item-condition">
+        <option value="Near Mint">Near Mint</option>
+        <option value="Lightly Used">Lightly Used</option>
+        <option value="Moderately Used">Moderately Used</option>
+        <option value="Heavily Used">Heavily Used</option>
+        <option value="Damaged">Damaged</option>
+      </select>
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
