--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,7 +10,7 @@
   </div>
 </form>
 <div>
-    <button class="email-button" type="submit">Send Email</button>
+    <button class="email-button">Send Email</button>
 </div>
 {{/if}}
 {{> comments post.comments}}
