--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -278,6 +278,12 @@ li:nth-child(odd) .items {
   background-color: var(--swap-secondary);
 }
 
+.comment:nth-child(even), 
+li:nth-child(even) .item, 
+li:nth-child(even) .items {
+  background-color: var(--swap-primary);
+}
+
 .comment .meta {
   font-size: 90%;
   margin-bottom: 0.5%;
@@ -302,3 +308,55 @@ footer {
 footer h1 {
   font-size: 1em;
 }
+
+.email-title {
+  text-align: center;
+  color: var(--swap-primary);
+  font-size: large;
+  font-weight: bold;
+  border-bottom: 1px solid var(--swap-secondary);
+}
+.email-button {
+  margin-top: 20px;
+}
+.email-title p {
+  margin-bottom: 5px;
+}
+
+/* tried to make a modal. No luck though. */
+/* .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 300px; 
+  left: 0;
+  top: 0;
+  margin: auto;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+  background-color: var(--swap-primary);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid var(--swap-letters);
+  border-radius: 5px;
+  width: 80%;
+}
+
+.close {
+  color: var(--swap-background);
+  float: right;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: var(--swap-letters);
+  text-decoration: none;
+  cursor: pointer;
+} */
