--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
   {{#each posts as |post|}}
   <li>
     {{> post-info post}}
-    {{> object post}}
+    {{!-- {{> object post}} --}}
   </li>
   {{/each}}
 </ul>
