--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,14 @@
   <title>SWAP SQUAD</title>
   <link rel="stylesheet" href="/styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
       <h1>
-        <a id="title" href="/">SWAP <span>SQUAD</span></a>
+        <a id="title" href="/">SWAP <span>SQUAD</span> <i class="material-icons">swap_horiz</i></a>
       </h1>
       <nav>
       {{#if loggedIn}}
