--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -84,12 +84,13 @@ textarea,
 input,
 .comment,
 select {
-  padding: 0.5%;
+  padding: 1%;
   border-radius: 5px;
   border: 1px solid #ccc;
   margin: 1rem 0;
   width: 100%;
 }
+
 
 #item-details {
   display: flex;
@@ -129,14 +130,31 @@ form label {
 }
 
 header {
-  border-bottom: 1px solid var(--swap-secondary);
+  /* border-bottom: 1px solid var(--swap-secondary); */
+  border-bottom: 1px solid var(--swap-letters);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1%;
   top: 0;
   position: sticky;
-  background: var(--swap-background);
+  background: repeating-linear-gradient(
+    45deg,
+    transparent,
+    transparent 10px,
+    var(--swap-background) 10px,
+    var(--swap-background) 20px
+  ),
+  linear-gradient(
+    to bottom,
+    var(--swap-background),
+    var(--swap-letters)
+  );
+}
+
+.material-icons {
+  transform: scale(2);
+  margin: 0 10px;
 }
 
 header h1,
@@ -175,7 +193,7 @@ section.items {
   margin: 1rem;
   padding: 1rem;
   border-radius: 0.5em;
-  width: 50%;
+  width: 100%;
 }
 
 ul {
@@ -188,6 +206,10 @@ h2 {
 }
 
 #my-stuff-wrapper {
+  display: flex;
+}
+
+#single-post-wrapper {
   display: flex;
 }
 
@@ -292,10 +314,21 @@ li:nth-child(even) .items {
 
 #content-wrapper {
   display: flex;
+  border-bottom: 1px solid var(--swap-secondary);
 }
 
 .edit-post-form {
   margin-bottom: 5%;
+  border-bottom: 1px solid var(--swap-secondary);
+  
+}
+
+.edit-post-form button {
+  margin-bottom: 20px;
+}
+
+.post-data {
+  color: var(--swap-primary);
 }
 
 footer {
@@ -309,54 +342,36 @@ footer h1 {
   font-size: 1em;
 }
 
+.email-div {
+  border-top: 1px solid var(--swap-secondary);
+  border-bottom: 1px solid var(--swap-secondary);
+}
+
 .email-title {
   text-align: center;
   color: var(--swap-primary);
   font-size: large;
   font-weight: bold;
-  border-bottom: 1px solid var(--swap-secondary);
 }
 .email-button {
-  margin-top: 20px;
+  margin: 10px 0;
 }
 .email-title p {
   margin-bottom: 5px;
 }
 
-/* tried to make a modal. No luck though. */
-/* .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 300px; 
-  left: 0;
-  top: 0;
-  margin: auto;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-}
+@media only screen and (max-width: 480px) {
+  .material-icons {
+    transform: scale(1);
+    margin: 0 5px;
+  }
+  
+  header h1,
+  footer h1 {
+    font-size: 1em;
+  }
 
-.modal-content {
-  background-color: var(--swap-primary);
-  margin: auto;
-  padding: 20px;
-  border: 1px solid var(--swap-letters);
-  border-radius: 5px;
-  width: 80%;
+  nav {
+    font-size: 12px;
+  }
 }
-
-.close {
-  color: var(--swap-background);
-  float: right;
-  font-size: 30px;
-  font-weight: bold;
-}
-
-.close:hover, .close:focus {
-  color: var(--swap-letters);
-  text-decoration: none;
-  cursor: pointer;
-} */
